# w0sa

./: .buildinfo  .gitignore  README.es.md  README.md  installation.html  pyproject.toml  requirements.txt  search.html  searchindex.js  technical_ref.html  w0sa.py
.github/workflows/: sphinx.yml
_sources/: getting_started.rst  index.rst
calibration/: calibration.py  data_calibration.py
cli/: shell.py
core/: osa_simulator.py  wss_simulator.py
data/: comparator.py
data/input_spectrums/: WaveData20240823_003.csv  WaveData20240823_004.csv  WaveData20240823_005.csv  WaveData20240823_007.csv  WaveData20240823_014.csv  WaveData20240823_015.csv  WaveData20240823_016.csv  WaveData20240829_004.csv
data/output_spectrums/: WaveData20240823_021.csv  WaveData20240823_023.csv  WaveData20240823_026.csv  WaveData20240823_030.csv  WaveData20240823_036.csv  WaveData20240823_038.csv  WaveData20240911_002.csv  WaveData20240911_006.csv  WaveData20240911_007.csv  WaveData20240911_008.csv  WaveData20240911_022.csv  w0sa250621_0.csv  w0sa250623_13.csv  w0sa250623_17.csv  w0sa250623_18.csv  w0sa250623_19.csv  w0sa250623_2.csv  w0sa250623_23.csv  w0sa250623_24.csv  w0sa250623_25.csv  w0sa250623_27.csv  w0sa250623_3.csv  w0sa250623_32.csv  w0sa250623_33.csv  w0sa250623_34.csv  w0sa250623_36.csv  w0sa250623_41.csv  w0sa250623_45.csv  w0sa250623_48.csv  w0sa250623_49.csv  w0sa250623_5.csv  w0sa250623_51.csv  w0sa250623_54.csv  w0sa250623_57.csv  w0sa250623_7.csv  w0sa250623_8.csv
docs/: conf.py  installation.rst  requirements.txt  technical_ref.rst
docs/_build/doctrees/: environment.pickle  getting_started.doctree  index.doctree  installation.doctree  technical_ref.doctree
docs/_build/html/: genindex.html  (+6 more)
tests/: commands.txt  dcc_gen.py  ura_gen.py
utils/: get_spectral_density.py  rcsv.py  resample.py  resolution_visualization.py
w0sa/: w0sa.py
w0sa/calibration/: calibration.py  data_calibration.py
w0sa/cli/: shell.py
w0sa/core/: .wss_simulator.py.swp  osa_simulator.py  wss_simulator.py
w0sa/data/: comparator.py  config_spectrums.py
w0sa/utils/: conversions.py  dcc_generator.py  get_spectral_density.py  numeric.py  rcsv.py  resample.py  resolution_visualization.py  spectrum_comparator.py  spectrum_inputs.py  spectrum_reader.py  spectrum_resample.py  spectrum_writer.py  ura_generator.py
(+99 files in other folders)
