[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "w0sa"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0"
]

[project.scripts]
w0sa = "w0sa.w0sa:main"
