[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "w0sa"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
  "numpy>=2.2.6",
  "scipy>=1.15.3",
  "matplotlib>=3.10.3",
  "requests>=2.32.4",
]

[project.optional-dependencies]
docs = [
  "sphinx>=8.1.3",
  "pydata-sphinx-theme>=0.15.4",
  "sphinx-book-theme>=1.1.4",
  "numpydoc>=1.9.0",
  "ghp-import>=2.1.0",
  "beautifulsoup4>=4.13.4",
]

[project.scripts]
w0sa = "w0sa.w0sa:main"
